<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/paddingitem" android:paddingRight="@dimen/paddingitem" android:paddingTop="@dimen/paddingitem">
        <EditText
            android:textCursorDrawable="@drawable/text_cursor"
            android:layout_marginTop="@dimen/paddingitem"
            android:singleLine="true"
            android:id="@+id/username"
            android:hint="@string/placeholder_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:textCursorDrawable="@drawable/text_cursor"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/paddingitem"
            android:singleLine="true"
            android:id="@+id/password"
            android:hint="@string/placeholder_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:textColor="@color/textWhite"
            android:background="@drawable/button_selector"
            android:id="@+id/signin"
            android:layout_marginTop="@dimen/paddingitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_signin"/>
        <TextView
            android:id="@+id/dosignout"
            android:paddingTop="@dimen/paddingitem"
            android:paddingBottom="@dimen/paddingitem"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_signoutnow"/>
        <TextView
            android:id="@+id/forgot"
            android:paddingTop="@dimen/paddingitem"
            android:paddingBottom="@dimen/paddingitem"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lupa Password? Reset disini"/>
    </LinearLayout>
</RelativeLayout>
